Additional styling to background colors. Changed note 'already in hoard' to 'hoarded' to prevent search cards from expanding too much when saved

--- a/src/components/hoardPage/Hoard.css
+++ b/src/components/hoardPage/Hoard.css
@@ -6,7 +6,7 @@
     align-items: center;
     border: solid black 1px;
     padding: 60px 10px 10px 10px;
-    background: rgb(219, 182, 114);
+    background: rgb(165 181 36 / 30%);
     min-width: 290px;
 }
 
