--- a/src/components/searchPage/Search.css
+++ b/src/components/searchPage/Search.css
@@ -7,7 +7,7 @@
     border: solid black 1px;
     padding: 60px 10px 10px 10px;
     background-color: #8BC6EC;
-    background: rgb(219, 182, 114);
+    background: rgb(165 181 36 / 30%);
     min-width: 290px;
 }
 
